--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
   background-color: var(--grey-900);
   color: var(--white);
   font-family: "Inter", sans-serif;
-  font-size: 1.6rem; 
+  font-size: 1.6rem;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -91,7 +91,11 @@ body {
 }
 
 /* Navigation links */
-cooking: 5 minutes .profile-links ul {
+.profile-links {
+  width: 100%;
+}
+
+.profile-links ul {
   list-style: none;
   display: flex;
   flex-direction: column;
